# del-ghcr

./: Cargo.toml  Dockerfile  README.md  download.sh  entry-point.sh
.github/workflows/: hadolint.yml  release.yml  scan_docker.yml
src/: commands.rs  domains.rs  lib.rs  main.rs
src/commands/: delete_images.rs  list_images.rs
src/domains/: context_parser.rs  errors.rs  ghcr_client.rs  github_api_result.rs
src/domains/errors/: api_error.rs  parse_error.rs  trait_error.rs
