[package]
name = "delete-ghcr"
version = "0.1.0"
edition = "2018"
description = "You can delete all untagged images of GitHub Container Registry (ghcr.io) by using this command."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seahorse = "1.1"
itertools = "0.10.1"
ureq = {version = "2.2.0", features = ["json"]}
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.67"
prettytable-rs = "0.8.0"
